Using the FileCleaningTracker now.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/fileupload/trunk@518775 13f79535-47bb-0310-9956-ffa450edef68