@@ -29,6 +29,8 @@ import java.io.ObjectOutputStream;
 import java.io.ObjectInputStream;
 import java.io.UnsupportedEncodingException;
 import java.util.Map;
+
+import org.apache.commons.io.FileCleaningTracker;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.io.FileCleaner;
 import org.apache.commons.io.output.DeferredFileOutputStream;
@@ -76,6 +78,11 @@ public class DiskFileItem
     implements FileItem {
 
     // ----------------------------------------------------- Manifest constants
+
+    /**
+     * The UID to use when serializing this instance.
+     */
+    private static final long serialVersionUID = 2237570099615271025L;
 
 
     /**
@@ -163,6 +170,10 @@ public class DiskFileItem
      */
     private File dfosFile;
 
+    /**
+     * The tracker, which is responsible for deleting the temporary file.
+     */
+    private FileCleaningTracker fileCleaningTracker;
 
     // ----------------------------------------------------------- Constructors
 
@@ -183,16 +194,63 @@ public class DiskFileItem
      * @param repository    The data repository, which is the directory in
      *                      which files will be created, should the item size
      *                      exceed the threshold.
+     * @deprecated Use {@link #DiskFileItem(FileCleaningTracker, String, String, boolean, String, int, File)}.
      */
     public DiskFileItem(String fieldName, String contentType,
             boolean isFormField, String fileName, int sizeThreshold,
             File repository) {
+        this(FileCleaner.getInstance(), fieldName, contentType,
+                isFormField, fileName, sizeThreshold,
+                repository);
+    }
+
+    /**
+     * Constructs a new <code>DiskFileItem</code> instance.
+     *
+     * @param tracker       The tracker, which is responsible for deleting
+     *                      the temporary file.
+     * @param fieldName     The name of the form field.
+     * @param contentType   The content type passed by the browser or
+     *                      <code>null</code> if not specified.
+     * @param isFormField   Whether or not this item is a plain form field, as
+     *                      opposed to a file upload.
+     * @param fileName      The original filename in the user's filesystem, or
+     *                      <code>null</code> if not specified.
+     * @param sizeThreshold The threshold, in bytes, below which items will be
+     *                      retained in memory and above which they will be
+     *                      stored as a file.
+     * @param repository    The data repository, which is the directory in
+     *                      which files will be created, should the item size
+     *                      exceed the threshold.
+     */
+    private DiskFileItem(FileCleaningTracker tracker, String fieldName, String contentType,
+            boolean isFormField, String fileName, int sizeThreshold, File repository) {
+        this.fileCleaningTracker = tracker;
         this.fieldName = fieldName;
         this.contentType = contentType;
         this.isFormField = isFormField;
         this.fileName = fileName;
         this.sizeThreshold = sizeThreshold;
         this.repository = repository;
+    }
+
+    /**
+     * Constructs a new <code>DiskFileItem</code> instance.
+     *
+     * @param factory       The factory, which is creating this instance.
+     * @param fieldName     The name of the form field.
+     * @param contentType   The content type passed by the browser or
+     *                      <code>null</code> if not specified.
+     * @param isFormField   Whether or not this item is a plain form field, as
+     *                      opposed to a file upload.
+     * @param fileName      The original filename in the user's filesystem, or
+     *                      <code>null</code> if not specified.
+     */
+    public DiskFileItem(DiskFileItemFactory factory, String fieldName, String contentType,
+            boolean isFormField, String fileName) {
+        this(factory.getFileCleaningTracker(), fieldName, contentType,
+                isFormField, fileName, factory.getSizeThreshold(),
+                factory.getRepository());
     }
 
 
@@ -597,7 +655,12 @@ public class DiskFileItem
         String tempFileName = "upload_" + UID + "_" + getUniqueId() + ".tmp";
 
         File f = new File(tempDir, tempFileName);
-        FileCleaner.track(f, this);
+        if (fileCleaningTracker != null) {
+            /* If a tracker is present, use it. Otherwise, we've got to trust
+             * in the {@link #finalize()} method.
+             */
+            fileCleaningTracker.track(f, this);
+        }
         return f;
     }
 
